alignment issue

--- a/Assests/CSS/Style.CSS
+++ b/Assests/CSS/Style.CSS
@@ -87,7 +87,7 @@ z-index:-1;
 
     .container{
         display: grid;
-        grid-template-columns: 1fr 30% 1fr 30% ;
+        grid-template-columns: 25% 20% 1fr 40% ;
         grid-template-rows: auto;
         grid-row-gap: 1em;
     }
